--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 API="https://exam.elevateegy.com/api/v1"
+NEXTAUTH_SECRET="bD6+u5J+tamYYjqyTerghkf97yHjbVjecLYDXCQfZ38="
+NEXTAUTH_URL="http://localhost:3000"
