--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.554.0",
     "next": "14.2.33",
+    "next-auth": "^4.24.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.66.1",
