--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
