--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,14 @@
     "next/typescript"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": true
+      }
+    ],
+    "@typescript-eslint/no-unused-expressions": "off"
   }
 }
