--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.90.10",
@@ -27,6 +28,7 @@
     "next": "14.2.33",
     "next-auth": "^4.24.13",
     "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
